src/objects/Care_USMS_Connection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will contain all the records required for connecting to USMS  system from salesforce.</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Care USMS Connection</label>
</CustomObject>